--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.5.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
