--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.18.1",
     "mongoose": "^6.5.3",
     "morgan": "^1.10.0",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "pgtools": "^0.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
